testsuite/tests/properties/invalid_bind/test.out
== bad_arity.lkt ==
common.lkt:18:9: error: extra arguments for NPropagate's comb_prop must be optional
18 |         node.type_var <- BazNode.conv_prop%(node.ref_var)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_return_type.lkt ==
common.lkt:18:9: error: NPropagate's comb_prop must return a subtype of FooNode.entity
18 |         node.type_var <- BazNode.conv_prop%(node.ref_var)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== unbound_dynvar.lkt ==
common.lkt:18:9: error: In call to BazNode.conv_prop as NPropagate's comb_prop, some dynamic variables need to be bound: dyn_node2
18 |         node.type_var <- BazNode.conv_prop%(node.ref_var)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== valid.lkt ==
Code generation was successful

== valid_default_arg.lkt ==
Code generation was successful

lkt_compile: Done
